--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ body {
 
   <ul style="line-height: 2;">
     <li>
-      <a href="./lionel/index.html">Winner's showcase notebook</a>
+      <a href="./Lionel/report.html">Winner's showcase notebook</a>
     </li>
   </ul>
 
